# Yezuoju

./: .gitignore  README.md  docker-compose.yml  env.example  requirements.txt  run_agent.py
StoryRag/: README.md  api.py  env.example  llm.py  main.py  rag.py  (+1 more)
StoryRag v1.1/: README.md  README_new.md  api.py  llm.py  main.py  rag.py  requirements.txt
StoryRag v1.2/: .gitignore  README.md  api.py  env.example  main.py  rag.py  requirements.txt
project-week5/hallucination_probes-main/: .gitignore  1.py  README.md  pyproject.toml  requirements.txt  train_data.yaml
project-week5/hallucination_probes-main/annotation_pipeline/: README.md  __init__.py  annotate.py  data_models.py  entity_annotation.prompt  run.py
project-week5/hallucination_probes-main/configs/: eval_config.yaml  train_config.yaml
project-week5/hallucination_probes-main/demo/: conversation_renderer.py  modal_backend.py  probe_interface.py
project-week5/hallucination_probes-main/probe/: __init__.py  config.py  dataset.py  dataset_converters.py  evaluate.py  loss.py  train.py  trainer.py  types.py  value_head_probe.py
project-week5/hallucination_probes-main/study/: LoRA适配器.md  TokenizedProbingDataset.md  ValueHeadProbe.md  Weights & Biases (wandb) 这个机器学习实验跟踪平台.md  apply_chat_template.md  load_dotenv.md  mode.gradient检查点启用().md  question.md  什么是探针(Probe).md  探针在评估和训练阶段.md  数据准备阶段.md  缓存设置(use_cache).md  语言大模型回复过程.md  配置探针(probe).md
project-week5/hallucination_probes-main/utils/: file_utils.py  hooks.py  metrics.py  model_utils.py  parsing.py  probe_loader.py  string_utils.py  tokenization.py
(+74 files in other folders)
